--- a/notebook/web_scrapping/web_scrapping.ipynb
+++ b/notebook/web_scrapping/web_scrapping.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Données sauvegardées dans '../data/raw/elo_distribution_brut_data.csv'\n"
+      "Données sauvegardées dans '../../data/raw/elo_distribution_brut_data.csv'\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "' # Attendre que le tableau soit présent et visible\\ntable = WebDriverWait(driver, 10).until(\\n    EC.presence_of_element_located((By.XPATH, \"//*[@id=\\'mainContent\\']/div/div[1]/div[1]/table\"))\\n)\\n\\n# 1. Récupérer le texte de la balise <br> dans la deuxième ligne, deuxième cellule\\nchallenger = driver.find_element(By.XPATH, \"//*[@id=\\'mainContent\\']/div/div[1]/div[1]/table/tbody/tr[2]/td[2]\").text\\nprint(f\"Challenger (Role): {challenger}\")\\n\\n# 2. Récupérer le texte de la balise <i> dans la deuxième ligne, troisième cellule\\nrank = driver.find_element(By.XPATH, \"//*[@id=\\'mainContent\\']/div/div[1]/div[1]/table/tbody/tr[2]/td[3]/i\").text\\nprint(f\"Rank: {rank}\")\\n\\n# Fermer le driver après avoir terminé\\ndriver.quit() '"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
